@@ -1,3 +1,4 @@
+Parse command line args for a directive like "-module 2" which will set that as the startup module (0-based indices)
 # 0.00.90 (55254) Aug 15, 2011
 Micro tab: Increased radius within which particles can jump on to existing crystals, which fixes many problems in crystallization, including large or unbalanced concentrations
 Micro tab: Made it so that a solute is saturated if either constituent is saturated rather than both
